# cetrainer-unpacker

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: archive.rs  decrypt.rs  main.rs  pe.rs
