[package]
name = "cetrainer-unpacker"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive"] }
miniz_oxide = { version = "0.7.4", features = ["std"] }
nom = "7.1.3"
object = { version = "0.36", default-features = false, features = ["pe", "read", "std"] }

[profile.release]
strip = true
lto = true